# transtoast

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  Package.resolved  Package.swift  README.md  TODO_MAC_APPSTORE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: auto-release.yml  build-release.yml  model-ci.yml  release-mas.yml
Sources/CCTrans/: AppDelegate.swift  AppleTranslationHost.swift  CredentialsProvider.swift  GitHubStarPrompter.swift  KeyboardMonitor.swift  LegacyBrandMigration.swift  LocalModelWarmupNotifier.swift  PasteboardMonitor.swift  RequestLogStore.swift  ScreenshotCapture.swift  ScreenshotHotKey.swift  SettingsStore.swift  SharedAppStorage.swift  main.swift
Sources/CCTransCore/: AppleTranslationBacking.swift  ClipboardDoubleCopyDetector.swift  GitHubStarPromptPolicy.swift  LocalModelRegistry.swift  OpenRouterModelCatalog.swift  TranslationService.swift  TranslatorSettings.swift
Sources/CopyTranslator/: AppDelegate.swift  CredentialsProvider.swift  KeyboardCaretLocator.swift  KeyboardMonitor.swift  LocalModelSetupWindowController.swift  LocalModelWarmupNotifier.swift  PasteboardMonitor.swift  main.swift  (+9 more)
design/: guide.html
docs/: local-runtimes.md  local-translation-benchmark-2026.json  local-translation-benchmark-2026.md  local-translation-multilingual-2026.json  local-translation-multilingual-2026.md  local-translation-retry-2026.json  local-translation-retry-and-runtime-design-2026.md  mac-app-store.md  other-mac-setup.md
fastlane/: Deliverfile  app_privacy_details.json
scripts/: build-app.zsh  build-mas.zsh  hy_mt2_translate.py  install-app.zsh  local_model_setup.py  local_translation_benchmark.py  multilingual_translation_benchmark.py  openrouter_prompt_probe.mjs  package-app.zsh  run-dev.zsh
src/: App.svelte  LocalModelSetup.svelte  PermissionHelper.svelte  RequestLogs.svelte  ToastStack.svelte  TranslationPopover.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  surfaces.rs
(+99 files in other folders)
