[package]
name = "copy-translator-tauri"
version = "0.1.0"
description = "CopyTranslator Tauri settings shell"
edition = "2021"

[lib]
name = "copy_translator_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
