[package]
name = "copy-translator-tauri"
version = "0.1.0"
description = "CopyTranslator Tauri settings shell"
edition = "2021"

[lib]
name = "copy_translator_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSDragging",
  "NSDraggingItem",
  "NSDraggingSession",
  "NSEvent",
  "NSImage",
  "NSPasteboard",
  "NSView",
  "NSWindow",
  "NSWorkspace"
] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
