[package]
name = "cctrans-tauri"
version = "0.1.0"
description = "CCTrans Tauri settings shell"
edition = "2021"

[lib]
name = "cctrans_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSDragging",
  "NSDraggingItem",
  "NSDraggingSession",
  "NSEvent",
  "NSImage",
  "NSPasteboard",
  "NSView",
  "NSWindow",
  "NSWorkspace",
  "block2"
] }
objc2-foundation = { version = "0.3", features = [
  "NSArray",
  "NSString",
  "NSURL",
  "NSUserDefaults",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
